// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should render modal when it not opened 1`] = `
<Modal
  ariaHideApp={false}
  bodyOpenClassName="ReactModal__Body--open"
  className="pw-modal-dialog"
  closeTimeoutMS={0}
  isOpen={false}
  overlayClassName="pw-modal-dialog__overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <ModalHeader
    title="foo"
  />
  <div
    className="pw-modal-dialog__content"
  >
    <Content />
  </div>
  <ModalFooter>
    Footer
  </ModalFooter>
</Modal>
`;

exports[`Modal should render modal when it opened 1`] = `
<Modal
  ariaHideApp={false}
  bodyOpenClassName="ReactModal__Body--open"
  className="pw-modal-dialog"
  closeTimeoutMS={0}
  isOpen={true}
  overlayClassName="pw-modal-dialog__overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <ModalHeader
    title="foo"
  />
  <div
    className="pw-modal-dialog__content"
  >
    <Content />
  </div>
  <ModalFooter>
    Footer
  </ModalFooter>
</Modal>
`;

exports[`Modal should render modal with header icon 1`] = `
<Modal
  ariaHideApp={false}
  bodyOpenClassName="ReactModal__Body--open"
  className="pw-modal-dialog"
  closeTimeoutMS={0}
  isOpen={true}
  overlayClassName="pw-modal-dialog__overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <ModalHeader
    icon={<Unknown />}
    title="foo"
  />
  <div
    className="pw-modal-dialog__content"
  >
    <Content />
  </div>
  <ModalFooter>
    Footer
  </ModalFooter>
</Modal>
`;
